--- a/LAHJA/UI/Components/Billing/Shared/CardsMethodsSection.razor
+++ b/LAHJA/UI/Components/Billing/Shared/CardsMethodsSection.razor
@@ -8,6 +8,7 @@
 @using LAHJA.UI.Components.TabelCard
 @using MudBlazor
 @using System.Globalization
+
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 @inject LanguageService languageService
@@ -31,7 +32,12 @@
                 </div>
             </TitleContent>
             <ChildContent>
-                <FormCard IsUpdate="isUpdate" BuildData="selectedCard" OnClickSave="OnSaveCard" />
+                <FormCard IsUpdate="isUpdate" BuildData="selectedCard" 
+                    OnClickSave="OnSaveAddCard" 
+                    OnEdit="OnSaveUpdateCard" 
+                    OnDelete="OnSaveDeleteCard"
+                    SubmitActiveCreditCard="OnSelectedActiveCard"/>
+
             </ChildContent>
         </MudExpansionPanel>
     }
@@ -51,7 +57,7 @@
                             <div class="d-flex flex-wrap justify-content-start align-items-center w-100">
                                 @* @foreach (var card in creditCards) *@
                                 @* { *@
-                                <TabelDashCard T="CardDetails" DataAndEventBuildTabel="dataAndEvent"
+                            <TabelDashCard T="CardDetailsVM" DataAndEventBuildTabel="dataAndEvent"
                                                StateCounts="cardStates"
                                                ActionTabels="groupAction"
                                            />
@@ -78,29 +84,27 @@
 
     private string lg = "ar";
 
-    private DataAndEventBuildTabelCard<CardDetails> dataAndEvent;
+    private DataAndEventBuildTabelCard<CardDetailsVM> dataAndEvent;
 
-
-    private List<CardDetails>? _dataBuild = new();
-
-
-
-
-
-    [Parameter] public EventCallback<CardDetails> SelectedCard { get; set; }
+    [Parameter] public EventCallback<CardDetails> SelectedActiveCard { get; set; }
     [Parameter] public EventCallback<CardDetails> CreateCard { get; set; }
     [Parameter] public EventCallback<CardDetails> EditCard { get; set; }
     [Parameter] public EventCallback<CardDetails> DeleteCard { get; set; }
 
-    [Parameter] public List<CardDetails> BuildData { get => creditCards; set
+    [Parameter]
+    public List<CardDetails> BuildData
+    {
+        get => creditCards.Cast<CardDetails>().ToList();
+        set
         {
-            if(value!=null)
-                creditCards = value;
-        } }
-
-
-    private List<CardDetails> creditCards ;
-    private CardDetails selectedCard = new CardDetails();
+            if (value != null)
+            {
+                creditCards = value.Cast<CardDetailsVM>().ToList();
+            }
+        }
+    }
+    private List<CardDetailsVM> creditCards;
+    private CardDetailsVM selectedCard = new CardDetailsVM();
     private bool open, isUpdate = false;
     private bool _expanded = false;
     private bool _isSelected = false;
@@ -125,6 +129,12 @@
         };
 
     private IDialogReference dialogRef;
+    private Dictionary<string, string[]> ColomsTrans = new Dictionary<string, string[]>
+    {
+        { "en", new string[] { "Card Number", "Holder Name","CardType", "ExpirationDate","Status" } },
+        { "ar", new string[] {"رقم البطاقة", "حامل البطاقة", "نوع البطاقة", "تأريخ الانتهاء","الحالة"} }
+    };
+
 
     protected override async void OnInitialized()
     {
@@ -132,32 +142,49 @@
 
         if (creditCards == null)
         {
-            creditCards = new List<CardDetails> { new CardDetails { CardNumber="454353455",HolderName="Azzaldeen",CardType="MasterCard",ExpirationDate="27/2",IsSelected=true } };
+            creditCards = new List<CardDetailsVM> { new CardDetailsVM { CardNumber = "454353455", HolderName = "Azzaldeen", CardType = "MasterCard", ExpirationDate = "27/2", IsSelected = true } };
         }
-        else if (SelectedCard.HasDelegate)      
+        else if (SelectedActiveCard.HasDelegate)
         {
             if ((selectedCard == null || string.IsNullOrEmpty(selectedCard.CardNumber)) && creditCards?.Count() > 0)
                 selectedCard = creditCards[0];
 
             if (selectedCard!=null)
-                await SelectedCard.InvokeAsync(selectedCard);
+                await SelectedActiveCard.InvokeAsync(selectedCard);
         }
 
-      
+
 
         initData(creditCards);
-       
+
     }
 
-    private void initData(List<CardDetails> dataBuild)
+    private void initData(List<CardDetailsVM> dataBuild)
     {
+
+
+
+
         dataAndEvent = new()
             {
                 DataBuild = dataBuild,
                 LabelColumns = ColomsTrans[lg].ToList(),
 
                 Events = new()
+                {
+                    OnRowClicked = EventCallback.Factory.Create<CardDetailsVM>(this, OnShowDetails)
+                }
             };
+
+        // foreach (var item in dataBuild)
+        // {
+
+        //     cardStates?.Add(new()
+        //         {
+        //             Value = item.CardNumber,
+        //             Label = item.IsSelected ? "Active" : "UnActive",
+        //         });
+        // }
 
         cardStates = new()
         {
@@ -165,17 +192,18 @@
             new()
             {
                 Value="6",
-                Label="Active"
+                Label="Active",
+
 
             },
 
-             new()
+               new()
             {
-                 Value="1",
-                Label="UnActive"
-            }
-            ,
+                Value="1",
+                Label="UnActive",
 
+
+            },
 
         };
         groupAction.Actions = new()
@@ -189,23 +217,20 @@
                 Name="انشاء",
 
             },
-            new()
-            {
-                Icon=@Icons.Material.Filled.Delete
-                ,
-                IsMudChip=false,
-                Tag="delete"
-            }
+            // new()
+            // {
+            //     Icon=@Icons.Material.Filled.Delete
+            //     ,
+            //     IsMudChip=false,
+            //     Tag="delete"
+            // }
         };
-        groupAction.ChipClicked += OnChipClicked;
+        groupAction.ChipClicked = OnChipClicked;
 
         // groupAction.CreateSpaceClicked = OnSubmitCreateSpace;
     }
-    Dictionary<string, string[]> ColomsTrans = new Dictionary<string, string[]>
-        {
-            { "en", new string[] { "Card Number", "Holder Name","CardType", "ExpirationDate","Status" } },
-            { "ar", new string[] {"رقم البطاقة", "حامل البطاقة", "نوع البطاقة", "تأريخ الانتهاء","الحالة"} }
-        };
+
+
     private async Task OnChipClicked(CardActionTabel action)
     {
         if (action.Tag == "delete")
@@ -222,52 +247,33 @@
         // await Task.CompletedTask;
 
     }
+
+    private async Task OnShowDetails(CardDetailsVM card)
+    {
+        await ShowCardDialog(GetTranslation("CreditCards"), false, true, card.GetClone());
+    }
+
     private async Task OnAddCard()
     {
         isUpdate = false;
-        // selectedCard = new CardDetails();
-        StateHasChanged();
+        await ShowCardDialog(GetTranslation("AddNewCard"), false, false, new CardDetails());
 
-        await ShowCardDialog(GetTranslation("AddNewCard"), false, OnSaveCard, new CardDetails());
-        // var parameters = new DialogParameters
-        // {
-        //     { "Title","Add new Card" },
-        //     { "IsUpdate", false },
-        //     { "OnClickSave", EventCallback.Factory.Create<CardDetails>(this, OnSaveCard) }
-        // };
-        // var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.ExtraSmall, FullWidth = false };
-        // dialogRef = DialogService.Show<FormCard>("", parameters, options);
-
- 
     }
-    private async Task OnDeleteCard(CardDetails card)
-    {
-        if (DeleteCard.HasDelegate && card != null)
-            await DeleteCard.InvokeAsync(selectedCard);
-    }
-    private async Task OnEditCard(CardDetails card)
-    {
 
+    private async Task OnEditCard(CardDetailsVM card)
+    {
         isUpdate = true;
         open = true;
         selectedCard = card;
         StateHasChanged();
-        await ShowCardDialog(GetTranslation("EditCard"), true, OnSaveCard, card);
+        await ShowCardDialog(GetTranslation("EditCard"), true, false, card.GetClone());
     }
-    private async void OnSelectedCard(CardDetails card)
-    {
-        _isSelected = true;
-        selectedCard = card;
-        selectedCard.IsSelected = true;
-        if (SelectedCard.HasDelegate && selectedCard != null)
-            await SelectedCard.InvokeAsync(selectedCard);
-        StateHasChanged();
-    }
+
     private async void OnConfirmSelectedCard()
     {
 
 
-        if (SelectedCard.HasDelegate && selectedCard!=null)
+        if (SelectedActiveCard.HasDelegate && selectedCard != null)
         {
             // foreach (var item in creditCards)
             // {
@@ -275,65 +281,89 @@
             //         item.IsSelected = false;
             // }
             selectedCard.IsSelected = true;
-            await SelectedCard.InvokeAsync(selectedCard);
+            await SelectedActiveCard.InvokeAsync(selectedCard.GetClone());
         }
     }
-    private async void OnSaveCard(CardDetails data)
+
+    private async Task OnSelectedActiveCard(CardDetails data)
     {
-        if (data != null)
-        { 
-            //On Selected Card
-        //     selectedCard = data;
-        //     _isSelected = true;
-        //     if (SelectedCard.HasDelegate)
-        //         await SelectedCard.InvokeAsync(selectedCard);
-        // }
-        // else
-        // {
-            if (dialogRef != null)
-                dialogRef.Close();
-
-            if (isUpdate)
+        if (data != null && dialogRef != null && !dialogRef.Result.IsCanceled)
+        {
+            _isSelected = true;
+            if (SelectedActiveCard.HasDelegate)
             {
-                if (EditCard.HasDelegate)
-                {
-                    await EditCard.InvokeAsync(data);
-                }
-
+                await SelectedActiveCard.InvokeAsync(data);
             }
+        }
+
+        // dialogRef.Close();
+    }
+    private async Task OnSaveAddCard(CardDetails data)
+    {
+            if (data != null && dialogRef != null && !dialogRef.Result.IsCanceled)
+            {
+            if (creditCards.Any(x => x.CardNumber == data.CardNumber))
+                Snackbar.Add(GetTranslation("CardAlreadyExistsMsg"), Severity.Error);
             else
             {
 
-                creditCards.Add(data);
+                creditCards.Add(data.GetCloneVM());
                 _isSelected = true;
                 if (CreateCard.HasDelegate)
                 {
+
                     await CreateCard.InvokeAsync(data);
                 }
+                dialogRef.Close();
             }
-        }
+            }
+        
+    }
+    private async Task OnSaveUpdateCard(CardDetails data)
+    {
 
-       
+            if (data != null && dialogRef != null && !dialogRef.Result.IsCanceled)
+            {
 
-        StateHasChanged();
+                    if (EditCard.HasDelegate)
+                    {
+                        await EditCard.InvokeAsync(data);
+                    }
+
+                    dialogRef.Close();
+
+                
+            }
+        
+    }
+    private async void OnSaveDeleteCard(CardDetails card)
+    {
+        if (DeleteCard.HasDelegate && card != null)
+            await DeleteCard.InvokeAsync(selectedCard.GetClone());
     }
 
- 
-    private async Task ShowCardDialog(string title, bool isUpdate, Action<CardDetails> callBack, CardDetails? data)
+
+
+
+    private async Task ShowCardDialog(string title, bool isUpdate, bool isShowDetails, CardDetails? data)
     {
         var parameters = new DialogParameters
         {
             { "Title",title },
             { "BuildData", data! },
             { "IsUpdate", isUpdate },
-            { "OnClickSave", EventCallback.Factory.Create<CardDetails>(this, callBack) }
+            { "IsShowDetails", isShowDetails },
+            { "SubmitActiveCreditCard", EventCallback.Factory.Create<CardDetails>(this,OnSelectedActiveCard) },
+            { "OnClickSave", EventCallback.Factory.Create<CardDetails>(this,OnSaveAddCard) },
+            { "OnEdit", EventCallback.Factory.Create<CardDetails>(this, OnSaveUpdateCard) },
+            { "OnDelete", EventCallback.Factory.Create<CardDetails>(this, OnSaveDeleteCard) }
         };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.ExtraSmall, FullWidth = false };
         dialogRef = DialogService.Show<FormCard>("", parameters, options);
 
         var result = await dialogRef.Result;
 
-        //  if (result?.Canceled==false)
+        // if (result?.Canceled==false)
         // {
 
         // }
@@ -360,7 +390,7 @@
         {
             lg = await _manageLanguageService.GetLanguageAsync();
             initData(creditCards);
-            InvokeAsync(StateHasChanged);
+           await InvokeAsync(StateHasChanged);
         }
 
 
@@ -383,6 +413,7 @@
         { "Cancel", "Cancel" },
         { "Update", "Update" },
         { "Save", "Save" },
+        { "CardAlreadyExistsMsg", "The card already exists.!!" },
     };
 
     public static Dictionary<string, string> TransAr = new Dictionary<string, string>()
@@ -396,6 +427,7 @@
         { "Cancel", "إلغاء" },
         { "Update", "تحديث" },
         { "Save", "حفظ" },
+        { "CardAlreadyExistsMsg", "البطاقة موجودة مسبقا !!" },
     };
  
 
